--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?> 
 
 <package format="2">
-  <name>sgm_gpu</name>
+  <name>sgm_gpu_ros</name>
   <version>0.0.0</version>
   <description>A ROS package of Semi-Global Matching on the GPU</description>
   <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>
